# maintenanced

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
resources/polkit/: 50-maintenanced-apt.rules  50-maintenanced-pacman.rules  50-maintenanced.rules
resources/systemd/: maintenanced-apk.service  maintenanced-apt.service  maintenanced-brew.service  maintenanced-dnf.service  maintenanced-emerge.service  maintenanced-flatpak.service  maintenanced-pacman.service  maintenanced-snap.service  maintenanced-xbps.service  maintenanced-yum.service  maintenanced-zypper.service
src/CPU/: CPULimiter.cpp  CPULimiter.h
src/Display/: DisplayBackend.h  DisplayController.cpp  DisplayController.h  HyprlandBackend.cpp  HyprlandBackend.h  KDEBackend.cpp  KDEBackend.h  SwayBackend.cpp  SwayBackend.h  X11Backend.cpp  X11Backend.h
src/RGBLighting/: RGBController.cpp  RGBController.h
systemd/: maintenanced-apt.service  maintenanced-pacman.service
